onlyargs_derive/compile_tests/conflicting_positional.stderr
error: Positional arguments can only be specified once.
 --> compile_tests/conflicting_positional.rs:4:5
  |
4 |     more: Vec<String>,
  |     ^^^^
