onlyargs_derive/compile_tests/conflicting_positional.rs
#[derive(Debug, onlyargs_derive::OnlyArgs)]
struct Args {
    rest: Vec<String>,
    more: Vec<String>,
}

fn main() {}
